# draw

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Canvas.tsx  ConfirmOverwriteDialog.tsx  EmptyState.tsx  FileTreeNode.tsx  NewItemDialog.tsx  Sidebar.tsx  SidebarResizer.tsx  UpdateButton.tsx  icons.tsx
src/hooks/: useActiveFile.ts  useAutoSave.ts  useDragDrop.ts  useFileTree.ts  useImportFlow.tsx  useUpdater.ts
src/lib/: excalidraw-io.ts  fs.ts  import.ts  paths.ts  state.ts
src/styles/: app.css
